fixed spacing issues

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -22,6 +22,7 @@
     section{
         padding-left: 5rem;
         padding-right: 5rem;
+        padding-top: 5rem;
     }
 }
 
